--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
         		<h2>... to the the finest nut and bolts website on the internet</h2>
         		<br/>
         		<br/>
-        		<div id="boximages">
-	        		<img src="img/logoBlue.jpg" alt="2ndLogo" width="100" height="100" />
-	        		<img src="img/logoStencil.jpg" alt="3rdLogo" width="100" height="100" />
-	        		<img src="img/logoHeat.jpg" alt="4thLogo" width="100" height="100" />
-	        		<img src="img/logoGreen.jpg" alt="5thLogo" width="100" height="100" />
-	        		<img src="img/logoBlue.jpg" alt="6thLogo" width="100" height="100" />
-	        		<img src="img/logoStencil.jpg" alt="7thLogo" width="100" height="100" />
-	        		<img src="img/logoHeat.jpg" alt="8thLogo" width="100" height="100" />
+				<div id="cartoon">
+        			<img src="img/nutcartoon.png" alt="mainlogo"width="142" height="142" />
         		</div>
+				<h2>News from the world of nuts</h2>
+				<p><a href="http://bit.ly/1tJ4Wbw">MISUMI ADDS NEW LINE OF 316 STAINLESS STEEL SCREWS, NUTS AND WASHERS</a></p>
+				<p><a href="http://ubm.io/QKchbk">Self Tightening Nuts</a></p>
+				<p><a href="http://bit.ly/1mKJP75">Robot industry gets down to nuts and bolts</a></p>
         	</div>
     	</div>
     </body>
